@@ -1,0 +1,8 @@
+/* $Id: feeds.css,v 1.1 2010/07/11 16:26:06 alexb Exp $ */
+
+#edit-feeds-FeedsFileFetcher-upload-wrapper .file-info {
+  float: left;
+  width: 200px;
+  border-right: 1px solid #ddd;
+  margin-right: 10px;
+  }
