@@ -1,8 +1,11 @@
-// $Id: CHANGELOG.txt,v 1.119 2010/07/11 01:36:39 alexb Exp $
+// $Id: CHANGELOG.txt,v 1.120 2010/07/11 16:26:06 alexb Exp $
 
 Feeds 6.x 1.X XXXX
 ------------------
 
+- #850998 alex_b: Clean up file upload form. Note: If you supply file paths
+  directly in the textfield rather than uploading them through the UI, you will
+  have to adjust your importer's File Fetcher settings.
 - #850652 alex_b: Make ParserCSV (instead of FeedsCSVParser) populate column
   names.
 - #850638 alex_b: Introduce FeedsSource::preview().
